PWB: Photo aligned correctly

--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -96,11 +96,11 @@ header {
 }
 
 img.profile-image {
-    width: 130px;
-    height: 160px;
+    width: 160px;
+    height: 180px;
     border-radius: 10%;
     border: solid rgb(104, 125, 182);
-    margin-left: 3.4rem;
+    margin-left: 2.4rem;
     align-items: center;
     align-self: center;
     align-content: center;
@@ -172,7 +172,7 @@ img.profile-image {
 /* Estilos para el Footer */
 .footer {
     grid-area: footer;
-    background-color: #2c3e50;
+    background-color: #0b345e;
     color: white;
     padding: 1.5rem;
 }
